# orxml

./: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/rulesets/: README.md  main-branch.json  push-hygiene.json  release-tags.json
.github/workflows/: ci.yml  release.yml
bench/: bench_parse.py  bench_unparse.py  conftest.py
bench/corpus/: generate_large.py  large_synthetic.xml  rss.xml  small.xml  soap.xml  tiny.xml
python/orxml/: __init__.py  _core.pyi
scripts/: apply-rulesets.sh  set-version.sh
src/: errors.rs  lib.rs  opts.rs  parse.rs  unparse.rs
tests/: conftest.py  test_options.py  test_parse_parity.py  test_unparse_parity.py
