[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "orxml"
version = "0.1.0"
description = "Rust-backed xmltodict-compatible XML parser/emitter with PyO3 bindings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "orxml authors" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Topic :: Text Processing :: Markup :: XML",
]

[project.urls]
Homepage = "https://github.com/bohdanhr/orxml"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "orxml._core"
python-source = "python"

[dependency-groups]
dev = [
    "maturin>=1.7",
    "pytest>=8",
    "pytest-benchmark>=4",
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "xmltodict>=0.14",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ty.src]
include = ["python"]
